Primeiro commit na branch dev

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Título do site</h1>        
+        <h1>BRANCH DEV</h1>
+        <h3>Escrevendo no index.html - branch dev</h3>
     </header>
     <article>
         <h2>Artigo 01</h2>
@@ -17,6 +18,10 @@
     <article>
         <h2>Artigo 02</h2>
         <p>Primeiro parágrafo do artigo 2.</p>
+    </article>
+    <article>
+        <h2>Artigo 03</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium neque quia consectetur, odit quae exercitationem ducimus praesentium nemo tempora tempore enim minus esse quidem totam, incidunt voluptas veritatis pariatur. Fugiat!</p>
     </article>
 </body>
 </html>
