--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Site - Curso de Git e github</title>
+    <title>Projeto Site - Curso de Git e Git Hub</title>
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <header>
-        <h1>BRANCH DEV</h1>
-        <h3>Escrevendo no index.html - branch dev</h3>
-        <h1>BRANCH TEST</h1>
-        <h3>Título do site</h3>
+        <h1>BRANCH MAIN</h1>
     </header>
     <article>
         <h2>Artigo 01</h2>
